# relic

./: BUILD.bazel
include/: relic_conf.h
src/epx/: relic_ep2_curve.c
