cc_library(
  name = "relic-lib",
  srcs = [
      "src/bc/relic_bc_aes.c",
      "src/bc/rijndael-alg-fst.c",
      "src/bc/rijndael-api-fst.c",
      "src/bn/relic_bn_add.c",
      "src/bn/relic_bn_cmp.c",
      "src/bn/relic_bn_div.c",
      "src/bn/relic_bn_factor.c",
      "src/bn/relic_bn_gcd.c",
      "src/bn/relic_bn_lcm.c",
      "src/bn/relic_bn_mem.c",
      "src/bn/relic_bn_mod.c",
      "src/bn/relic_bn_mul.c",
      "src/bn/relic_bn_mxp.c",
      "src/bn/relic_bn_prime.c",
      "src/bn/relic_bn_rec.c",
      "src/bn/relic_bn_shift.c",
      "src/bn/relic_bn_smb.c",
      "src/bn/relic_bn_sqr.c",
      "src/bn/relic_bn_srt.c",
      "src/bn/relic_bn_util.c",
      "src/cp/relic_cp_bbs.c",
      "src/cp/relic_cp_bdpe.c",
      "src/cp/relic_cp_bgn.c",
      "src/cp/relic_cp_bls.c",
      "src/cp/relic_cp_ecdh.c",
      "src/cp/relic_cp_ecdsa.c",
      "src/cp/relic_cp_ecies.c",
      "src/cp/relic_cp_ecmqv.c",
      "src/cp/relic_cp_ecss.c",
      "src/cp/relic_cp_ibe.c",
      "src/cp/relic_cp_phpe.c",
      "src/cp/relic_cp_rabin.c",
      "src/cp/relic_cp_rsa.c",
      "src/cp/relic_cp_sokaka.c",
      "src/cp/relic_cp_vbnn_ibs.c",
      "src/cp/relic_cp_zss.c",
      "src/dv/relic_dv_mem.c",
      "src/dv/relic_dv_util.c",
      "src/eb/relic_eb_add.c",
      "src/eb/relic_eb_curve.c",
      "src/eb/relic_eb_dbl.c",
      "src/eb/relic_eb_frb.c",
      "src/eb/relic_eb_hlv.c",
      "src/eb/relic_eb_map.c",
      "src/eb/relic_eb_mul.c",
      "src/eb/relic_eb_mul_fix.c",
      "src/eb/relic_eb_mul_sim.c",
      "src/eb/relic_eb_neg.c",
      "src/eb/relic_eb_norm.c",
      "src/eb/relic_eb_param.c",
      "src/eb/relic_eb_pck.c",
      "src/eb/relic_eb_util.c",
      "src/ed/relic_ed_add.c",
      "src/ed/relic_ed_curve.c",
      "src/ed/relic_ed_dbl.c",
      "src/ed/relic_ed_map.c",
      "src/ed/relic_ed_mul.c",
      "src/ed/relic_ed_mul_fix.c",
      "src/ed/relic_ed_mul_sim.c",
      "src/ed/relic_ed_param.c",
      "src/ed/relic_ed_pck.c",
      "src/ed/relic_ed_util.c",
      "src/ep/relic_ep_add.c",
      "src/ep/relic_ep_curve.c",
      "src/ep/relic_ep_dbl.c",
      "src/ep/relic_ep_map.c",
      "src/ep/relic_ep_mul.c",
      "src/ep/relic_ep_mul_fix.c",
      "src/ep/relic_ep_mul_sim.c",
      "src/ep/relic_ep_neg.c",
      "src/ep/relic_ep_norm.c",
      "src/ep/relic_ep_param.c",
      "src/ep/relic_ep_pck.c",
      "src/ep/relic_ep_util.c",
      "src/epx/relic_ep2_add.c",
      "src/epx/relic_ep2_curve.c",
      "src/epx/relic_ep2_dbl.c",
      "src/epx/relic_ep2_frb.c",
      "src/epx/relic_ep2_map.c",
      "src/epx/relic_ep2_mul.c",
      "src/epx/relic_ep2_mul_fix.c",
      "src/epx/relic_ep2_mul_sim.c",
      "src/epx/relic_ep2_neg.c",
      "src/epx/relic_ep2_norm.c",
      "src/epx/relic_ep2_pck.c",
      "src/epx/relic_ep2_util.c",
      "src/fb/relic_fb_add.c",
      "src/fb/relic_fb_cmp.c",
      "src/fb/relic_fb_exp.c",
      "src/fb/relic_fb_inv.c",
      "src/fb/relic_fb_itr.c",
      "src/fb/relic_fb_mul.c",
      "src/fb/relic_fb_param.c",
      "src/fb/relic_fb_poly.c",
      "src/fb/relic_fb_rdc.c",
      "src/fb/relic_fb_shift.c",
      "src/fb/relic_fb_slv.c",
      "src/fb/relic_fb_sqr.c",
      "src/fb/relic_fb_srt.c",
      "src/fb/relic_fb_trc.c",
      "src/fb/relic_fb_util.c",
      "src/fbx/relic_fb2_inv.c",
      "src/fbx/relic_fb2_mul.c",
      "src/fbx/relic_fb2_slv.c",
      "src/fbx/relic_fb2_sqr.c",
      "src/fp/relic_fp_add.c",
      "src/fp/relic_fp_cmp.c",
      "src/fp/relic_fp_exp.c",
      "src/fp/relic_fp_inv.c",
      "src/fp/relic_fp_mul.c",
      "src/fp/relic_fp_param.c",
      "src/fp/relic_fp_prime.c",
      "src/fp/relic_fp_rdc.c",
      "src/fp/relic_fp_shift.c",
      "src/fp/relic_fp_sqr.c",
      "src/fp/relic_fp_srt.c",
      "src/fp/relic_fp_util.c",
      "src/fpx/relic_fp12_mul.c",
      "src/fpx/relic_fp12_sqr.c",
      "src/fpx/relic_fp18_mul.c",
      "src/fpx/relic_fp18_sqr.c",
      "src/fpx/relic_fp2_mul.c",
      "src/fpx/relic_fp2_sqr.c",
      "src/fpx/relic_fp3_mul.c",
      "src/fpx/relic_fp3_sqr.c",
      "src/fpx/relic_fp6_mul.c",
      "src/fpx/relic_fp6_sqr.c",
      "src/fpx/relic_fpx_add.c",
      "src/fpx/relic_fpx_cmp.c",
      "src/fpx/relic_fpx_exp.c",
      "src/fpx/relic_fpx_frb.c",
      "src/fpx/relic_fpx_inv.c",
      "src/fpx/relic_fpx_pck.c",
      "src/fpx/relic_fpx_rdc.c",
      "src/fpx/relic_fpx_srt.c",
      "src/fpx/relic_fpx_util.c",
      "src/md/blake2s-ref.c",
      "src/md/relic_md_blake2s.c",
      "src/md/relic_md_hmac.c",
      "src/md/relic_md_kdf.c",
      "src/md/relic_md_mgf.c",
      "src/md/relic_md_sha1.c",
      "src/md/relic_md_sha256.c",
      "src/md/relic_md_sha384.c",
      "src/md/relic_md_sha512.c",
      "src/md/sha1.c",
      "src/md/sha224-256.c",
      "src/md/sha384-512.c",
      "src/pc/relic_pc_util.c",
      "src/pp/relic_pp_add.c",
      "src/pp/relic_pp_dbl.c",
      "src/pp/relic_pp_exp.c",
      "src/pp/relic_pp_map.c",
      "src/pp/relic_pp_norm.c",
      "src/rand/relic_rand_call.c",
      "src/rand/relic_rand_core.c",
      "src/rand/relic_rand_fips.c",
      "src/rand/relic_rand_hash.c",
      "src/rand/relic_rand_rdrnd.c",
      "src/rand/relic_rand_udev.c",
      "src/relic_bench.c",
      "src/relic_conf.c",
      "src/relic_core.c",
      "src/relic_err.c",
      "src/relic_pool.c",
      "src/relic_test.c",
      "src/relic_trace.c",
      "src/relic_util.c",
  ],
  hdrs = [
      "src/bc/rijndael-alg-fst.h",
      "src/bc/rijndael-api-fst.h",
      "src/md/blake2-impl.h",
      "src/md/blake2.h",
      "src/md/sha.h",
      "include/relic.h",
      "include/relic_arch.h",
      "include/relic_bc.h",
      "include/relic_bench.h",
      "include/relic_bn.h",
      "include/relic_conf.h",
      "include/relic_core.h",
      "include/relic_cp.h",
      "include/relic_dv.h",
      "include/relic_eb.h",
      "include/relic_ec.h",
      "include/relic_ed.h",
      "include/relic_ep.h",
      "include/relic_epx.h",
      "include/relic_err.h",
      "include/relic_fb.h",
      "include/relic_fbx.h",
      "include/relic_fp.h",
      "include/relic_fpx.h",
      "include/relic_label.h",
      "include/relic_md.h",
      "include/relic_pc.h",
      "include/relic_pool.h",
      "include/relic_pp.h",
      "include/relic_rand.h",
      "include/relic_test.h",
      "include/relic_trace.h",
      "include/relic_types.h",
      "include/relic_util.h",
      "include/low/relic_dv_low.h",
      "include/low/relic_fb_low.h",
      "include/low/relic_fp_low.h",
      "include/low/relic_bn_low.h",
      "include/low/relic_fpx_low.h",
  ],
  includes = ["include", "include/low"],
  visibility = ["//visibility:public"],
)